--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
 <body>
     <main>
        <header>
-           <h1>Título do site</h1>
+           <h1>Textos Terráqueos</h1>
        </header> 
        <article>
-           <h2>
-               Artigo 001
-               <p>Texto Artigo 001</p>
-           </h2>
+           <h2>Parte I</h2>
+           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores molestias eius magni qui fugiat sapiente cupiditate adipisci voluptatum blanditiis ipsum! Magnam enim doloribus dolores cupiditate molestias aperiam earum est laudantium.</p>
        </article>
        <article>
-        <h2>Artigo 002</h2>
-        <p>Texto Artigo 002</p>
+        <h2>Parte II</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aspernatur saepe harum doloribus cum at adipisci unde quas accusamus quae incidunt optio dignissimos eius, velit ullam ratione totam repellendus? Rem.</p>
        </article>
     </main>   
 </body>
