--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Terráqueo</title>
+    <title>Curso em Vídeo</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
        <header>
-           <h1>Textos Terráqueos</h1>
+           <h1>Cursos Grátis</h1>
+           <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
        </header> 
        <article>
-           <h2>Parte I</h2>
+           <h2>Curso de HTML5 com CSS33</h2>
+           <img class="lado" src="imagens/curso-html-css.png" alt="">
            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores molestias eius magni qui fugiat sapiente cupiditate adipisci voluptatum blanditiis ipsum! Magnam enim doloribus dolores cupiditate molestias aperiam earum est laudantium.</p>
        </article>
+       <p><a href="">Acesse o curso de HTML5</a></p>
        <article>
-        <h2>Parte II</h2>
+        <h2>Curso de JavaScript</h2>
+        <img class="lado" src="imagens/curso-javascript.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aspernatur saepe harum doloribus cum at adipisci unde quas accusamus quae incidunt optio dignissimos eius, velit ullam ratione totam repellendus? Rem.</p>
        </article>
+       <P><a href="">Acesse o curso de JavaScript</a></P>
     </main>   
 </body>
 </html>
