Alterei a pasta dos links

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
            <img class="lado" src="imagens/curso-html-css.png" alt="">
            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores molestias eius magni qui fugiat sapiente cupiditate adipisci voluptatum blanditiis ipsum! Magnam enim doloribus dolores cupiditate molestias aperiam earum est laudantium.</p>
        </article>
-       <p><a href="">Acesse o curso de HTML5</a></p>
+       <p><a href="arquivos/cursoHTML.html">Acesse o curso de HTML5</a></p>
        <article>
         <h2>Curso de JavaScript</h2>
         <img class="lado" src="imagens/curso-javascript.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aspernatur saepe harum doloribus cum at adipisci unde quas accusamus quae incidunt optio dignissimos eius, velit ullam ratione totam repellendus? Rem.</p>
        </article>
-       <P><a href="">Acesse o curso de JavaScript</a></P>
+       <P><a href="arquivos/cursoJS.html">Acesse o curso de JavaScript</a></P>
     </main>   
 </body>
 </html>
